Added retrieval handling support in Generic Frontend Server to support
conversion between MARC/XML as well as XSLTtransforms. See
etc/yazgfs.xml for an example.

Added Authentication support to Generic Frontend Server in SRU
mode. Authentication using HTTP Basic is supported, as is the use
of 'x-username' and 'x-password' parameters in the request itself.

Added support for a new character set MARC8s identical to MARC8 except
that it converts combined characters to single Unicode characters in the
Latin-1 range (when possible).

--- 2.1.18 2006/04/24

ASN.1 compiler 0.4: generates brief Doxygen file header for 
generated .h/.c files. 

Utility yaz_iconv now supports conversion to MARC-8.

New facilities for the MARC module. The reading - and writing of
content are separate methods for the yaz_marc_t handle. The following
read functions are available: yaz_marc_read_iso2709 (Reads MARC in
ISO2709 format), yaz_marc_read_xml (reads MARC in MARCXML/MarcXchange
format). Write functions have prefix yaz_marc_write_.. The existing
utilities yaz_marc_decode_wrbuf and yaz_marc_decode_buf are still
available. Removed support for OAI-MARC and simplexml (not the
simplexml from PHP5).

Added a new ZOOM event type ZOOM_EVENT_END which signals no more events
to be returned for this connection.

--- 2.1.16 2006/03/31

Allow multiple languages and charsets to be specified with
yaz-client. Each item must be separated by comma (NO BLANKS). E.g.
  negcharset iso-8859-1,utf-8

Translation of proximity nodes from CQL into PQF now works.

Moved to automake 1.8, 1.9.

Added function yaz_log_set_handler which allows a log handler to be
installed. This handler will be called for all log messages.  Output
to file is also produced; but that can be disabled by passing NULL
fname to yaz_log_init_file.

Fixed another problem with MARC-8 -> ISO-8859-1 conversions. Bug #537.

For SRW (including GFS), accept application/soap+xml as content-type
for SOAP msg.
