@@ -1,9 +1,11 @@
-<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook V4.1//EN" [
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook V4.1//EN" 
+ "http://www.oasis-open.org/docbook/xml/4.1/docbookx.dtd"
+[
      <!ENTITY % common  SYSTEM "common/common.ent">
      %common;
      <!ENTITY yaz-client-commands SYSTEM "yaz-client-commands.xml">
 ]>
-<!-- $Id: yaz-client-man.xml,v 1.8 2006-04-25 11:25:08 marc Exp $ -->
+<!-- $Id: yaz-client-man.xml,v 1.9 2006-05-24 12:33:21 adam Exp $ -->
 <refentry id="yaz-client">
  
  <refmeta>
