@@ -1,7 +1,9 @@
-<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook V4.1//EN" [
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook V4.1//EN"
+ "http://www.oasis-open.org/docbook/xml/4.1/docbookx.dtd"
+[
      <!ENTITY zoomsh-commands SYSTEM "zoomsh-commands.xml">
 ]>
-<!-- $Id: zoomsh-man.xml,v 1.3 2006-04-25 11:25:08 marc Exp $ -->
+<!-- $Id: zoomsh-man.xml,v 1.4 2006-05-24 12:33:21 adam Exp $ -->
 <refentry id="zoomsh">
  
  <refmeta>
