@@ -1,3 +1,9 @@
+Documentation for YAZ is now based on the Docbook XML/XSLT using
+xsltproc + N Walsh's stylesheets. It means that the CVS version of YAZ
+is no longer depending on jade/openjade or docbook-to-man scripts.
+PDF is no longer part of the distribution - but can optionally be
+made using DSSSL/jadetex or FOP.
+
 Added retrieval handling support in Generic Frontend Server to support
 conversion between MARC/XML as well as XSLTtransforms. See
 etc/yazgfs.xml for an example.
